# Sentrix

./: Cargo.toml  README.md  sentrix.example.toml
docs/: ARCHITECTURE.md  DEVELOPMENT.md  PROGRESS.md
src/: config.rs  config_loader.rs  lib.rs  main.rs  report.rs
src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
src/scanner/: mod.rs  persistence.rs  processes.rs  recent_files.rs
