[package]
name = "sentrix"
version = "0.1.0"
edition = "2021"

[lib]
name = "sentrix"
path = "src/lib.rs"

[[bin]]
name = "sentrix"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[profile.release]
opt-level = "z"
lto = true
strip = true
